# cube-plugin

./: CMakeLists.txt  README.md  SystemTreeJsonPlugin.cpp  SystemTreeJsonPlugin.cubegui-plugin  SystemTreeJsonPlugin.h
src/: CubeJsonPlugin.cpp  CubeJsonPlugin.h
